# CompressK

./: .gitignore  OAK_nh3 1.ipynb  README.md  README_run.md  algorithms.md  api.md  architecture.md  configuration.md  eigvecs.txt  gs_uccsd_params.txt  index.md  krylov cipsi primitive.py  krylov_cipsi.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  pyscfH4.py  quickstart.md  two_elec.txt
.github/workflows/: deploy-docs.yml
configs/: README.md  config-UNDCHEMAASTHANL.toml  config.toml  config_cas1212.toml
data/: n2_cas1212_finetuned.pt  n2_feature_mlp.pt
docs/: algorithms.md  api.md  architecture.md  configuration.md  development.md  index.md  legacy.md  ml.md  quickstart.md
experiments/: krylov cipsi dense reuseRitz.py
legacy/: README.md  __init__.py  krylov_cipsi_primitive.py
scripts/: README.md  cr2_scan.py  generate_ai_selector_training_data.py  n2_cas_scan.py  n2_pes_ai_scan_and_plot.py  n2_pes_scan_and_plot.py  n2_utils.py  train_feature_mlp.py  train_operator_nn.py
scripts/legacy/: n2_scan_legacy.py
src/ccik/: README.md  __init__.py  ai_selector_krylov.py  cipsi.py  config.py  core.py  fciqmc_krylov.py  feature_mlp.py  operator_nn.py  params.py  pyscf_cas.py  stochastic.py  thick_restart.py
src/ccik/defaults/: __init__.py  config.toml
tests/: conftest.py  n2_sample.toml  test_core_utils.py  test_operator_nn.py  test_pyscf_smoke.py
