[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccik"
version = "0.1.0"
description = "Compressed Krylov Subspace method with selected-configuration matvecs (CCIK/CCIK-style dense implementation)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "" }]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
# Keep heavy deps optional so the package can be imported without them.
quantum = [
  "pyscf",
]
plot = [
  "matplotlib",
]
test = [
  "pytest",
]
all = [
  "ccik[quantum,plot,test]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ccik = ["defaults/*.toml"]

[tool.pyright]
extraPaths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
